[package]
name = "benchmarker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
futures = { version = "0.3", features = ["executor"] }
indicatif = "0.17"
hdrhistogram = "7.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-client = "0.12"
bytes = "1.6"
tokio-util = { version = "0.7.10", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
prost = "0.13"
tokio-tungstenite = "0.21"
url = "2.5"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.12"
