[package]
name = "hugimq"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bytes = "1.6.0"
dashmap = "6.1.0"
jemallocator = "0.5"
libc = "0.2"
parking_lot = "0.12"
socket2 = "0.5"

[[bin]]
name = "hugimq-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
