[package]
name = "hugimq"
version = "0.3.0"
edition = "2021"

[dependencies]
rusteron-client = "0.1"
rusteron-media-driver = "0.1"
core_affinity = "0.8.1"
mimalloc = "0.1.43"
dashmap = "6.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ctrlc = "3.4.4"

[[bin]]
name = "hugimq-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
